2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_new_region):
	Fix crash when zIndex is not defined.

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_push_attr):
	* src/gstttmlstate.c: (gst_ttml_state_push_attribute):
	Fix backgroundColor when applied to regions from a style.

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_region_compare_zindex),
	(gst_ttmlrender_new_region):
	* src/gstttmlutils.c:
	Support zIndex attribute, so regions can be put on top of one another.

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlutils.c:
	Fix parsing of lineThrough decoration attribute (Animation013.xml)
	(This was a regression from ttmlparse)

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlutils.c: (gst_ttml_utils_enum_parse_func):
	Fix parsing of attributes with trailing whitespace (Animation006.xml)
	(This was a regression from ttmlparse)

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts):
	Support for the tts:display attribute in ttmlrender. This was already
	present in ttmlparse.

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_render_outline):
	Enlarge blur temporary surface so the blur radius fits in it (fixes
	truncated blurs on small fonts)

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	* src/Makefile.am:
	* src/gstttmlblur.c: (gst_ttml_blur_create_gaussian_kernel),
	(gst_ttml_blur_image_surface):
	* src/gstttmlblur.h:
	* src/gstttmlrender.c: (gst_ttmlrender_render_outline),
	(gst_ttmlrender_show_regions):
	* win32/vs10/libgstfluttml_sdk.vcxproj:
	* win32/vs10/libgstfluttml_sdk.vcxproj.filters:
	Support for blurred outline. This is a direct implementation without any